Melhorias de ambiente e limpezas.