@@ -49,7 +49,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @Transactional
 @DisplayName("CDU-05: Iniciar processo de revisão")
 public class CDU05IntegrationTest {
-    private static final String API_PROCESSOS_ID_INICIAR_TIPO_REVISAO = "/api/processos/{id}/iniciar?tipo=REVISAO";
+    private static final String API_PROCESSOS_ID_INICIAR_TIPO_REVISAO = "/api/processos/{codigo}/iniciar?tipo=REVISAO";
 
     @Autowired
     private MockMvc mockMvc;
@@ -140,25 +140,25 @@ public class CDU05IntegrationTest {
         // 3. Buscar o subprocesso criado e verificar a cópia do mapa
         List<Subprocesso> subprocessos = subprocessoRepo.findByProcessoCodigo(processoId);
         assertThat(subprocessos).hasSize(1);
-        Subprocesso subprocessoCriado = subprocessos.get(0);
+        Subprocesso subprocessoCriado = subprocessos.getFirst();
         Mapa mapaCopiado = subprocessoCriado.getMapa();
 
-        // 3.1. Verificar se o mapa copiado é uma nova instância (ID diferente)
+        // 3.1. Verificar se o mapa copiado é uma nova instância (código diferente)
         assertThat(mapaCopiado.getCodigo()).isNotNull();
         assertThat(mapaCopiado.getCodigo()).isNotEqualTo(mapaOriginal.getCodigo());
 
         // 3.2. Verificar se o conteúdo foi copiado
         List<Competencia> competenciasCopiadas = competenciaRepo.findByMapaCodigo(mapaCopiado.getCodigo());
         assertThat(competenciasCopiadas).hasSize(1);
-        assertThat(competenciasCopiadas.get(0).getDescricao()).isEqualTo(competenciaOriginal.getDescricao());
+        assertThat(competenciasCopiadas.getFirst().getDescricao()).isEqualTo(competenciaOriginal.getDescricao());
 
         List<Atividade> atividadesCopiadas = atividadeRepo.findByMapaCodigo(mapaCopiado.getCodigo());
         assertThat(atividadesCopiadas).hasSize(1);
-        assertThat(atividadesCopiadas.get(0).getDescricao()).isEqualTo(atividadeOriginal.getDescricao());
+        assertThat(atividadesCopiadas.getFirst().getDescricao()).isEqualTo(atividadeOriginal.getDescricao());
 
-        List<Conhecimento> conhecimentosCopiados = conhecimentoRepo.findByAtividadeCodigo(atividadesCopiadas.get(0).getCodigo());
+        List<Conhecimento> conhecimentosCopiados = conhecimentoRepo.findByAtividadeCodigo(atividadesCopiadas.getFirst().getCodigo());
         assertThat(conhecimentosCopiados).hasSize(1);
-        assertThat(conhecimentosCopiados.get(0).getDescricao()).isEqualTo(conhecimentoOriginal.getDescricao());
+        assertThat(conhecimentosCopiados.getFirst().getDescricao()).isEqualTo(conhecimentoOriginal.getDescricao());
     }
 
 
@@ -193,7 +193,7 @@ public class CDU05IntegrationTest {
 
     @Test
     void testIniciarProcessoRevisao_processoNaoEncontrado_falha() throws Exception {
-        mockMvc.perform(post(API_PROCESSOS_ID_INICIAR_TIPO_REVISAO, 999L).with(csrf())) // ID que não existe
+        mockMvc.perform(post(API_PROCESSOS_ID_INICIAR_TIPO_REVISAO, 999L).with(csrf())) // código que não existe
                 .andExpect(status().isNotFound());
     }
 
